# Package-Template

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  README.rst  package.json  setup.cfg  setup.py
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_slug}}/.github/: dependabot.yml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/riso/: README.md  ci.yml  local.yml  manage.py  production.yml  pyproject.toml
{{cookiecutter.project_slug}}/riso/.envs/.local/: .django.example  .postgres.example
{{cookiecutter.project_slug}}/riso/.envs/.production/: .django.example  .postgres.example
{{cookiecutter.project_slug}}/riso/compose/local/django/: Dockerfile
{{cookiecutter.project_slug}}/riso/config/: api_router.py  celery_app.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/riso/config/settings/: base.py  local.py  production.py  test.py
{{cookiecutter.project_slug}}/riso/docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
{{cookiecutter.project_slug}}/riso/docs/pycharm/: configuration.rst
{{cookiecutter.project_slug}}/riso/requirements/: base.txt  local.txt
{{cookiecutter.project_slug}}/riso/riso/: conftest.py
{{cookiecutter.project_slug}}/riso/riso/templates/: 403.html  404.html  500.html  base.html
{{cookiecutter.project_slug}}/riso/riso/users/: adapters.py  admin.py  apps.py  models.py  urls.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  apps.py
(+33 files in other folders)
