[metadata]
name = riso-{{cookiecutter.project_slug}}
version = {{cookiecutter.version}}
description = {{cookiecutter.description}}
long_description = file: README.rst
url = {{cookiecutter.repo_url}}
author = {{cookiecutter.author_name}}
author_email = {{cookiecutter.email}}
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find:
python_requires = >=3.11
install_requires =
    Django >= 4.2